<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:icon="@drawable/misc" >

    <PreferenceCategory android:title="@string/preferences_widget_settings" >
        <EditTextPreference
            android:defaultValue="30"
            android:key="widget_time"
            android:summary="@string/preferences_widget_settings_interval_summary"
            android:title="@string/preferences_widget_settings_interval_title"
			android:inputType="numberDecimal"/>
    	<ListPreference
            android:entries="@array/widget_bg_entry"
            android:entryValues="@array/widget_bg_values"
            android:key="widget_bg"
            android:summary=""
            android:title="@string/prefs_widget_bg"
			android:defaultValue="grey"/>
    
    </PreferenceCategory>

     
</PreferenceScreen>
