<?xml version="1.0" encoding="utf-8"?>


   
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				
				<TextView
					
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/android_version_"/>
			
			<TextView
				android:id="@+id/androidVersion"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>

			</LinearLayout>
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				
				<TextView
					
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/api_level_"/>
			<TextView
				android:id="@+id/api"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>

			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cpu_abi_"/>
			
			<TextView
				android:id="@+id/cpuAbi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>
			
			<LinearLayout

				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/manufacturer_"/>
			
			<TextView
				android:id="@+id/manufacturer"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/bootloader_"/>
			
			<TextView
				android:id="@+id/bootloader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/hardware_"/>
			
			<TextView
				android:id="@+id/hardware"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/radio_"/>
			
			<TextView
				android:id="@+id/radio"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/board_"/>
			
			<TextView
				android:id="@+id/board"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/brand_"/>
			
			<TextView
				android:id="@+id/brand"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/device_"/>
			
			<TextView
				android:id="@+id/device"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/display_"/>
			
			<TextView
				android:id="@+id/display"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fingerprint_"/>
			
			<TextView
				android:id="@+id/fingerprint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/host_"/>
			
			<TextView
				android:id="@+id/host"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/id_"/>
			
			<TextView
				android:id="@+id/id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/model_"/>
			
			<TextView
				android:id="@+id/model"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/product_"/>
			
			<TextView
				android:id="@+id/product"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tags_"/>
			
			<TextView
				android:id="@+id/tags"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/type_"/>
			
			<TextView
				android:id="@+id/type"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/user_"/>
			
			<TextView
				android:id="@+id/user"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<ImageView
                android:id="@+id/fastcharge_head_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/divider_strong_holo" />
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/installed_applications_"/>
			
			<TextView
				android:id="@+id/userApps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/system_applications_"/>
			
			<TextView
				android:id="@+id/systemApps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			<ImageView
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/divider_strong_holo" />
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/screen_resoulution_"/>
			
			<TextView
				android:id="@+id/screenResolution"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/screen_refresh_rate_"/>
			
			<TextView
				android:id="@+id/screenRefreshRate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/screen_density_"/>
			
			<TextView
				android:id="@+id/screenDensity"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/screen_ppi"/>
			
			<TextView
				android:id="@+id/screenPPI"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			<ImageView
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/divider_strong_holo" />
			<LinearLayout
				android:id="@+id/gpu2dLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				
				<TextView
					
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/gpu_2d_frequency_"/>
			
			<TextView
				android:id="@+id/gpu2d"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>

			</LinearLayout>
			<LinearLayout
				android:id="@+id/gpu3dLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
				
				<TextView
					
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/gpu_3d_frequency_"/>
			<TextView
				android:id="@+id/gpu3d"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>

			<LinearLayout
				android:id="@+id/vsyncLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/vsync_"/>
			
			<TextView
				android:id="@+id/vsync"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/fastchargeLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fastcharge_"/>
			
			<TextView
				android:id="@+id/fastcharge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
				
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/cdepthLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/color_depth_"/>
			
			<TextView
				android:id="@+id/cdepth"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/schedulersLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/schedulers_"/>
			
			<TextView
				android:id="@+id/schedulers"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
			
			<LinearLayout
				android:id="@+id/s2wLayout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
			>

				<TextView

					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/sweep2wake_"/>
			
			<TextView
				android:id="@+id/s2w"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="5dp"/>
			</LinearLayout>
				<ImageView
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/divider_strong_holo" />
			<TextView
				android:id="@+id/kernel"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
			
		</LinearLayout>
		
	</ScrollView>
