<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	tools:context=".KernelTuner"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="5dp">

	<ListView
		android:id="@+id/list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/ll1"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true">

	</ListView>

	<LinearLayout
		android:id="@+id/ll1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/ll2">

		<Button
			android:id="@+id/button1"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/all_m12_5mv"
			android:textSize="14sp"/>

		<Button
			android:id="@+id/button2"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/all_p12_5mv"
			android:textSize="14sp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/ll2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/ly3">

		<Button
			android:id="@+id/button3"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/save"
			android:textSize="14sp"/>

		<Button
			android:id="@+id/button4"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/load"
			android:textSize="14sp"/>

		<Button
			android:id="@+id/button5"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/clear"
			android:textSize="14sp"/>

		<Button
			android:id="@+id/button6"
			style="@android:style/TextAppearance.Small"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:text="@string/delete"
			android:textSize="14sp"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/ly3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical">

		<com.google.android.gms.ads.AdView
			android:id="@+id/adView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			ads:adUnitId="@string/admob_adUnitId_Banner"
			ads:adSize="BANNER"
			android:layout_marginTop="5dp"
			android:visibility="gone"
			android:layout_gravity="center_horizontal"/>

	</LinearLayout>

</RelativeLayout>

