<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@color/grey"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight=".50"
        android:gravity="left"
        android:text="@string/mhz"
        android:textColor="@color/accent"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight=".30"
        android:gravity="right"
        android:text="@string/time"
        android:textColor="@color/accent"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/percent"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight=".20"
        android:gravity="right"
        android:text="@string/percent"
        android:textColor="@color/accent"
        android:textSize="16sp"/>

</LinearLayout>